--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bhs-scripts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Helper scripts for TypeScript Node/React development",
   "main": "index.js",
   "repository": {
@@ -14,14 +14,26 @@
     "prepublish": "npm run build"
   },
   "bin": {
-    "bhs-launch": "./bin/launch.js"
+    "bhs-dev": "./bin/dev.js"
   },
   "author": "Braden Snell",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^10.7.1",
+    "@types/webpack": "^4.4.10",
+    "@types/webpack-serve": "^2.0.0",
+    "@types/ws": "^6.0.0",
+    "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.8",
     "prettier": "^1.14.2",
+    "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.1",
+    "ts-node-dev": "^1.0.0-pre.26",
     "tslib": "^1.9.3",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-serve": "^2.0.2",
+    "ws": "^6.0.0"
   }
 }
