--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,7 @@
   "extends": "./configs/tsconfig.json",
   "compilerOptions": {
     "outDir": "out"
-  }
+  },
+  "include": ["./lib/**/*.ts"],
+  "files": ["./types.d.ts"]
 }
