--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bhs-scripts",
   "version": "0.0.3",
   "description": "Helper scripts for TypeScript Node/React development",
-  "main": "index.js",
+  "main": "out/main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bradenhs/bhs-scripts.git"
@@ -14,7 +14,9 @@
     "prepublish": "npm run build"
   },
   "bin": {
-    "serve": "./bin/serve.js"
+    "serve": "./bin/serve.js",
+    "build-server": "./bin/buildServer.js",
+    "build-client": "./bin/buildClient.sh"
   },
   "files": [
     "bin",
@@ -29,17 +31,22 @@
     "@types/webpack": "^4.4.10",
     "@types/webpack-serve": "^2.0.0",
     "@types/ws": "^6.0.0",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
     "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
     "fork-ts-checker-webpack-plugin": "^0.4.8",
     "node-dev": "^3.1.3",
     "prettier": "^1.14.2",
+    "style-loader": "^0.22.1",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslib": "^1.9.3",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
     "webpack-serve": "^2.0.2",
     "ws": "^6.0.0"
   }
