--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,12 @@
 {
   "private": true,
   "dependencies": {
-    "bhs-scripts": "0.0.2"
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
+    "bhs-scripts": "0.0.3",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.2.5",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   }
 }
