--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "./configs/tsconfig.json",
   "compilerOptions": {
-    "outDir": "out"
+    "outDir": "out",
+    "declaration": true
   },
   "include": ["./lib/**/*.ts"],
   "files": ["./types.d.ts"]
