--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bhs-scripts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Helper scripts for TypeScript Node/React development",
   "main": "out/main.js",
   "repository": {
@@ -16,7 +16,8 @@
   "bin": {
     "serve": "./bin/serve.js",
     "build-server": "./bin/buildServer.js",
-    "build-client": "./bin/buildClient.sh"
+    "build-client": "./bin/buildClient.sh",
+    "create-bhs-app": "./bin/createApp.js"
   },
   "files": [
     "bin",
@@ -27,17 +28,25 @@
   "author": "Braden Snell",
   "license": "MIT",
   "dependencies": {
+    "@types/download": "^6.2.2",
+    "@types/ncp": "^2.0.1",
     "@types/node": "^10.7.1",
+    "@types/rimraf": "^2.0.2",
+    "@types/tar": "^4.0.0",
     "@types/webpack": "^4.4.10",
     "@types/webpack-serve": "^2.0.0",
     "@types/ws": "^6.0.0",
     "css-loader": "^1.0.0",
+    "download": "^7.1.0",
     "file-loader": "^1.1.11",
     "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
     "fork-ts-checker-webpack-plugin": "^0.4.8",
+    "ncp": "^2.0.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.14.2",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.22.1",
+    "tar": "^4.4.6",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
